objects/TW1_Programacao__c.object
<CustomObject>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_Atores__c</fullName>
        <label>Atores</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Animação</fullName>
                </value>
                <value>
                    <fullName>Ação/Aventura</fullName>
                </value>
                <value>
                    <fullName>Ação/Comédia</fullName>
                </value>
                <value>
                    <fullName>Ação</fullName>
                </value>
                <value>
                    <fullName>Animação/Infantil</fullName>
                </value>
                <value>
                    <fullName>Aventura</fullName>
                </value>
                <value>
                    <fullName>Biografia</fullName>
                </value>
                <value>
                    <fullName>Comédia Dramática</fullName>
                </value>
                <value>
                    <fullName>Comédia Romântica</fullName>
                </value>
                <value>
                    <fullName>Comédia</fullName>
                </value>
                <value>
                    <fullName>Desenho</fullName>
                </value>
                <value>
                    <fullName>Documentário</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Épico</fullName>
                </value>
                <value>
                    <fullName>Erótico</fullName>
                </value>
                <value>
                    <fullName>Esporte</fullName>
                </value>
                <value>
                    <fullName>Família</fullName>
                </value>
                <value>
                    <fullName>Fantasia</fullName>
                </value>
                <value>
                    <fullName>Faroeste</fullName>
                </value>
                <value>
                    <fullName>Festival</fullName>
                </value>
                <value>
                    <fullName>Ficção</fullName>
                </value>
                <value>
                    <fullName>Infantil</fullName>
                </value>
                <value>
                    <fullName>Musical</fullName>
                </value>
                <value>
                    <fullName>Policial</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>Suspense/Terror</fullName>
                </value>
                <value>
                    <fullName>Suspense</fullName>
                </value>
                <value>
                    <fullName>Terror</fullName>
                </value>
                <value>
                    <fullName>Thriller</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Classificacao__c</fullName>
        <label>Classificação</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Livre</fullName>
                </value>
                <value>
                    <fullName>10 anos</fullName>
                </value>
                <value>
                    <fullName>12 anos</fullName>
                </value>
                <value>
                    <fullName>14 anos</fullName>
                </value>
                <value>
                    <fullName>16 anos</fullName>
                </value>
                <value>
                    <fullName>18 anos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Direcao__c</fullName>
        <label>Direção</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Duracao_min__c</fullName>
        <label>Duração(min)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_Original__c</fullName>
        <label>Nome Original</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_do_Filmes__c</fullName>
        <externalId>true</externalId>
        <label>Nome do Filmes</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TW1_Pais__c</fullName>
        <label>País</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Sinopse__c</fullName>
        <label>Sinopse</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_URL_Trailer__c</fullName>
        <label>URL Trailer</label>
        <type>Url</type>
    </fields>
    
    <label>Programação</label>
    <listViews>
        <fullName>Filmes</fullName>
        <columns>NAME</columns>
        <columns>TW1_Atores__c</columns>
        <columns>TW1_Categoria__c</columns>
        <columns>TW1_Classificacao__c</columns>
        <columns>TW1_Duracao_min__c</columns>
        <filterScope>Everything</filterScope>
        <label>Filmes</label>
    </listViews>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidaFormatoYoutube</fullName>
        <active>true</active>
        <description>Valida se o valor preenchido no campo é uma URL válida do youtube.</description>
        <errorConditionFormula>NOT(REGEX(TW1_URL_Trailer__c, &apos;(?:https?:\\/\\/)?(?:www\\.)?(?:youtu\\.be\\/|youtube\\.com\\/(?:embed\\/|v\\/|watch\\?v=|watch\\?.+&amp;v=))((\\w|-){11})(?:\\S+)?$&apos;))</errorConditionFormula>
        <errorMessage>Favor inserir uma URL do youtube válida.</errorMessage>
    </validationRules>
</CustomObject>